# mindr

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  lib.rs  main.rs  todo.rs
src/app/: helper.rs  list.rs  menu.rs  selection.rs  tabs.rs
src/app/tabs/: done.rs  todo.rs
src/todo/: helper.rs  list.rs  menu.rs  selection.rs
tests/: config.rs  configuration.rs
