[package]
name = "mindr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
# TODO: delete linefeed
linefeed = "0.6.0"
rustyline = "10.0.0"
configparser = "3.0.1"
chrono = "0.4.22"

[dev-dependencies]
serial_test = "0.9.0"
